2010-02-18  Dirk Bergstrom  <krid@otisbean.com>

Further prep for Localization.

    * app/assistants/actions-assistant.js: Change "Ok" to "OK" globally.
    (ChangePasswordDialogAssistant): Add L10N for dialog title.
    
    * app/assistants/app-assistant.js (handleCommand): Update copyright year
    in "About" dialog.
    (Keyring.version): Remove, now sourced from appinfo.json.

    * app/assistants/categories-assistant.js: L10N for scene and dialog titles.

    * app/assistants/item-assistant.js: Switch to key/value L10N calls for
    clarity.
    
    * app/assistants/item-list-assistant.js: Remove commented dead code.
    
    * app/assistants/locked-assistant.js: Change "Ok" to "OK".
    
    * app/models/ring.js (DEFAULT_CATEGORIES): Move outside of Ring to allow
    better default behavior.
    (categories, _processDecryptedData, clearDatabase): Use new
    DEFAULT_CATEGORIES.
    (importData, resolutions, onDeactivateOptions, lockoutToOptions): Better
    L10N keys.
   
	* app/views/*: Small changes to multiple files to simplify L10N.  Use
	id's and do L10N in the js layer.	

2010-02-01  Dirk Bergstrom  <krid@otisbean.com>

	* app/models/ring.js, upgrader.js: Add $L localization to all strings.
	
	* app/assistants/item-list-assistant.js: Add $L localization to all strings.
	
	* app/assistants/actions-assistant, categories-assistant.js: Tidy up a few
	localization issues.

2010-01-17  Dirk Bergstrom  <krid@otisbean.com>

Closes gh-13: Work around deficiency in Mojo.Model.encrypt()
Closes gh-10: Option to clear decrypted in-memory data on lockout
Closes gh-9: bad usage of encryption - security hole
    * app/models/ring.js: Data is now stored in the Depot as a large encrypted
    blob, instead of a JSON object.  This is more secure, and it allows us
    to get around a deficiency in Mojo.Model.encrypt. 
    Data loading pathway has been revamped to handle the need to get a
    password in the middle of the process.